examples/errors/parsing/factorial-lowercase-prim.cn
fun factorial : Int -> Int [impure] = {
  n ->
  let acc = new[Int] 1;
  let u = del[Int] acc;
  n
}

main : () [impure] = ()
